--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,9 +8,10 @@ body {
 }
 
 .login-card {
+  height: 70vh;
   width: 40%;
   background-color: #415a77;
-  margin: 1em 0 0 5em;
+  margin: 5em 0 0 5em;
   padding: 2em 0;
   border-radius: 20px;
 }
